--- a/index-START.html
+++ b/index-START.html
@@ -62,6 +62,7 @@
   <script>
       window.addEventListener("keydown", function(e){
         const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
         if(!audio) return;
         audio.currentTime=0;
         audio.play();
