--- a/index-START.html
+++ b/index-START.html
@@ -66,7 +66,18 @@
         if(!audio) return;
         audio.currentTime=0;
         audio.play();
+        key.classList.add('playing')
+
       });
+
+      function removeTransition(e) {
+        if(e.propertyName !== 'transform') return;
+        console.log(e.propertyName);
+      }
+
+        const keys = document.querySelectorAll('.key');
+        keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
   </script>
 
 
